--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "*.html": "html",
         "cstdio": "c",
         "queue": "c",
-        "random": "c"
+        "random": "c",
+        "*.jlox": "c"
     }
 }
