Methods on Classes and starting THIS

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,7 @@
       "projectName": "jlox_7dfec56e",
       "args": 
       [
-          "./langtest/test.jlox"
+          "./langtest/class.jlox"
       ],
       "stepFilters": {
         "classNameFilters": [
